--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
+    "@sanity/vision": "^3.0.0",
     "next": "latest",
     "next-sanity": "^4.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@sanity/vision": "^3.0.0",
     "sanity": "^3.0.0",
+    "sanity-plugin-iframe-pane": "^2.1.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
