--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^13.1.2",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
