--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
