--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@next/font": "^13.1.2",
-    "@nextui-org/react": "^1.0.0-beta.12",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "latest",
     "next-sanity": "^4.0.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "styled-components": "^5.2.0"
