--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@vercel/analytics": "^0.1.8",
     "next": "latest",
     "next-sanity": "^4.0.6",
     "next-themes": "^0.2.1",
